--- a/index.html
+++ b/index.html
@@ -7,17 +7,35 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class="container">
-        <h1>Do you love me?</h1>
-        <div class="buttons">
-            <button id="yes-btn">Yes</button>
-            <button id="no-btn">No</button>
-        </div>
-        <div id="celebration-message" class="hidden">
-            <h2>I love you too, my kuchu puchu!</h2>
-            <div class="fireworks"></div>
-        </div>
+    <!-- Blurred Background Text -->
+    <div class="background-text">I love Vanisha</div>
+
+    <!-- Special Notes with Hover -->
+    <div class="hover-area">
+        Hover here! 🌸
+        <div class="hover-message">You're the most amazing person! 💕</div>
     </div>
+    <div class="hover-area">
+        Hover over me! 🍓
+        <div class="hover-message">You make my world brighter! 🌟</div>
+    </div>
+
+    <!-- Love Meter -->
+    <div class="love-meter">
+        <button onclick="showLoveMeter()">Click to see how much I love you</button>
+        <div id="meter-display" class="meter-hidden">100% Love! 💖</div>
+    </div>
+
+    <!-- Countdown -->
+    <div class="countdown">
+        We've been talking for <span id="days-count"></span> days! 🌻
+    </div>
+
+    <!-- Audio for Mitski's song -->
+    <audio autoplay loop>
+        <source src="mitski-i-bet-on-losing-dogs.mp3" type="audio/mpeg">
+        Your browser does not support the audio element.
+    </audio>
 
     <script src="script.js"></script>
 </body>
